--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Setup
 title:        Cytoflow
 tagline:      Better quantitative flow cytometry.
-version:      1.0
-baseurl:      "/cytoflow"
+version:      1.1
+baseurl:      "/"
 paginate:     1
 
 # About/contact
 author:  
   name:       Brian Teague
-  url:        https://brian.teague.name
+  url:        https://teague.bio
 
 # Gems
 gems:
